Fixed the bug that caused modal backdrop to cover modal content and make its buttons un-clickable -> z-index: 0; on .grainy-background css for MainLayout

--- a/JoArtGUI/Components/Layout/MainLayout.razor.css
+++ b/JoArtGUI/Components/Layout/MainLayout.razor.css
@@ -2,7 +2,6 @@
     min-height: 100vh;
     background: rgb(216, 216, 216);
     position: relative;
-    z-index: 0;
 }
 
 .grainy.background:before {
@@ -17,7 +16,6 @@
     pointer-events: none;
     z-index: -1;
 }
-
 
 #blazor-error-ui {
     background: lightyellow;
